Resources/CSS/style.css
body{
  font-size: 18px;
  font-family: Helvetica;
  line-height: 1.4;
}

.uppercase{
  text-transform: uppercase;
}

.flex{
  display: flex;
  justify-content: center;
}

.container{
  max-width: 960px;
  margin: auto;
}
/* Header and Banner */
.banner-image{
  background-image: url('../Images/main-banner.png');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  height: 30rem;
  padding-top: 1rem;
}

.header{
  margin: 0 auto;
  background-color: cadetblue;
  font-size: 1rem;
  justify-content: space-between;
  align-items: center;
  padding-top: 1rem;
  padding-bottom: 1rem;
  font-size: 1rem;
  color: white;
}

.logo{
  align-items: center;
}

.header img{
  height: 1.5rem;
  padding-left: 2rem;
  padding-right: 1rem;
}

.header a{
  padding-right: 2rem;
  text-decoration: none;
  color: white;
}

.header a:hover{
  color: lightgray;
}

.banner{
  justify-content: flex-end;
  margin: auto;
}

.banner-text{
  margin-top: 10rem;
  margin-right: -2rem;
  font-weight: bold;
  font-size: 2rem;
  line-height: 1.2rem;
  padding: 1.5rem 5rem;
  background: white;
}

.mobile-menu{
  display: none;
}

/* Call-out Images */
.call-out-icons{
  justify-content: space-around;
}

.icon{
  flex-direction: column;
  margin: 3rem;
  height: 8rem;
  width: 5rem;
  text-align: center;
  text-wrap: wrap;
  align-items: center;
}

.icon img:hover{
  transition: all 200ms ease-in;
  transform: scale(1.5);
}

.icon img{
  margin-bottom: 1rem;
  width: 5rem;
}

#exam-icon img{
  width: 3.5rem;
}

/* Philosophy and Appointments */
.info-block{
  width: 35%;
  padding-right: 5%;
  padding-bottom: 5rem;
}

.info-block h3{
  font-weight: bold;
  color: white;
  font-size: 1rem;
  margin-bottom: 1rem;
  padding: 0.5rem 1.25rem;
  background-color: cadetblue;
  width: 10rem;
  transition: width 3s;
}

.info-block h3:hover{
  width: 100%;
}

/* Footer */
.footer{
  background-color: azure;
  padding: 4rem;
  text-align: left;
  justify-content: flex-start;
}

.footer img{
  height: 1.5rem;
  padding-right: 1rem;
}



/* Screen-size Adjustments */

/* Tablet */
@media only screen and (max-width: 1070px){
  .container{
    max-width: 100%;
  }

  .banner-image{
    padding-top: 0px;
    height: 22rem;
  }

  .banner-text{
    margin-top: 5rem;
    margin-right: 2rem;
    font-size: 1.33rem;
    line-height: 1.2rem;
    padding: 0.75rem 4rem;
    background: white;
  }
}


/* Mobile */
@media only screen and (max-width: 680px){
  .container{
    max-width: 100%;
  }

  .banner-image{
    padding-top: 0;
    height: 17rem;
    background-position: 20%;
  }

  .banner-text{
    margin-top: 9rem;
    width: 100%;
    padding: 1rem auto;
    margin-right: auto;
    margin-left: auto;
    text-align: center;
  }

  .main-menu{
    display: none;
  }

  .call-out-icons{
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 3.77rem;
  }

  .about{
    display: flex;
    flex-direction: column;
  }

  .info-block{
    width: 100%;
    margin-bottom: 4rem;
    font-size: 0.77rem;
  }

  .info-block h3{
    width: 100%;
    margin-bottom: 1rem;
    text-align: center;
  }

  .info-block p{
    margin: 1rem;
  }

  .footer span{
    display: none;
  }

  .footer img{
    margin: 0 auto;
  }

  /* Drop down menu */
  .mobile-menu {
      position: relative;
      display: inline-block;
  }

  .dropdown:hover{
    color: lightgray;
  }

  .dropdown-content {
      display: none;
      position: absolute;
      min-width: 100px;
      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
      z-index: 1;
      left: -30px;
  }

  .dropdown-content a {
      color: white;
      padding: 10px;
      text-decoration: none;
      display: block;
      background: cadetblue;
  }

  .dropdown-content a:hover{
    background: white;
    color: cadetblue;
  }

  .mobile-menu:hover .dropdown-content {
      display: block;
  }



}

